<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PotatoHead"
    tools:ignore="ContentDescription" android:orientation="vertical"
    android:weightSum="1"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/body"
            android:src="@drawable/body"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hat"
            android:src="@drawable/hat"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eyes"
            android:src="@drawable/eyes"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eyebrows"
            android:src="@drawable/eyebrows"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/glasses"
            android:src="@drawable/glasses"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nose"
            android:src="@drawable/nose"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mouth"
            android:src="@drawable/mouth"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mustache"
            android:src="@drawable/mustache"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ears"
            android:src="@drawable/ears"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/arms"
            android:src="@drawable/arms"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shoes"
            android:src="@drawable/shoes"
            android:adjustViewBounds="true"
            android:maxWidth="250dp"
            android:maxHeight="250dp"
            android:scaleType="fitCenter"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/darkGrey"
        android:text="@string/instruct"
        android:id="@+id/instruct"
        android:layout_gravity="center_horizontal" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="5"
        android:columnCount="2"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hat"
            android:id="@+id/checkHat"
            android:onClick="OnCheckboxClicked" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eyes"
            android:id="@+id/checkEyes"
            android:onClick="OnCheckboxClicked" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/eyebrow"
            android:id="@+id/checkEyebrow"
            android:onClick="OnCheckboxClicked" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/glasses"
            android:id="@+id/checkGlasses"
            android:checked="false"
            android:onClick="OnCheckboxClicked" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nose"
            android:id="@+id/checkNose"
            android:checked="false"
            android:onClick="OnCheckboxClicked" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mouth"
            android:id="@+id/checkMouth"
            android:onClick="OnCheckboxClicked" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mustache"
            android:id="@+id/checkMustache"
            android:onClick="OnCheckboxClicked" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ears"
            android:id="@+id/checkEars"
            android:onClick="OnCheckboxClicked" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/arms"
            android:id="@+id/checkArms"
            android:onClick="OnCheckboxClicked" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shoes"
            android:id="@+id/checkShoes"
            android:onClick="OnCheckboxClicked" />
    </GridLayout>
</LinearLayout>


